--- a/.github/workflows/main_githubdotnetwebappservice.yml
+++ b/.github/workflows/main_githubdotnetwebappservice.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.100-preview.6.22352.1'
-          include-prerelease: false
+          include-prerelease: true
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
